# geometry

./: .buildinfo  .bumpversion.cfg  .compmake_history.txt  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  api.html  api_summary.html  definitions.html  design.html  genindex.html  index.html  np-modindex.html  objects.inv  project.pp1.yaml  py-modindex.html  pypackage.mk  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.json  setup.py  shippable.yml  tests_fast.sh  tests_manifold.sh  tests_plus_coverage.sh  todo.html
.circleci/: config.yml  geometry_manifolds_tests.tests  geometry_tests.tests
.doctrees/: api.doctree  api_summary.doctree  definitions.doctree  design.doctree  environment.pickle  index.doctree  todo.doctree
.doctrees/api/: geometry.basic_utils.assert_allclose.doctree  geometry.doctree  (+68 more)
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js
api/: geometry.basic_utils.assert_allclose.html  geometry.basic_utils.finite.html  geometry.basic_utils.normalize_length.html  geometry.basic_utils.normalize_length_or_zero.html  geometry.basic_utils.safe_arccos.html  geometry.distances.html  geometry.html  geometry.manifolds.S1.html  geometry.manifolds.S2.html  geometry.manifolds.SE2.html  geometry.manifolds.SE3.html  geometry.manifolds.SO2.html  geometry.manifolds.SO3.html  geometry.manifolds.base.DifferentiableManifold.html  geometry.manifolds.base.Group.html  geometry.manifolds.euclidean.Euclidean.html  geometry.manifolds.html  geometry.manifolds.matrix_lie_group.MatrixLieAlgebra.html  geometry.manifolds.matrix_lie_group.MatrixLieGroup.html  geometry.manifolds.moebius.Moebius.html  geometry.manifolds.special_euclidean.SE.html  geometry.manifolds.special_orthogonal.SO.html  geometry.manifolds.sphere.Sphere.html  geometry.manifolds.tests.html  geometry.manifolds.todo.html  geometry.manifolds.torus.Torus.html  geometry.poses.SE2_from_translation_angle.html  geometry.poses.SE2_from_xytheta.html  geometry.poses.combine_pieces.html  geometry.poses.extract_pieces.html  geometry.poses.linear_angular_from_se2.html  geometry.poses.pose_from_rotation_translation.html  geometry.poses.rotation_translation_from_pose.html  geometry.poses.se2_from_linear_angular.html  geometry.poses.translation_angle_from_SE2.html  geometry.procrustes.best_orthogonal_transform.html  geometry.procrustes.closest_orthogonal_matrix.html  geometry.rotations.axis_angle_from_quaternion.html  geometry.rotations.axis_angle_from_rotation.html  geometry.rotations.geodesic_distance_for_rotations.html  (+30 more)
docs/: Makefile  compile_website_from_scratch.sh  docs.mk  epydoc.cfg  init_website.sh
modules/: geometry.html  index.html  snp_geometry.html
sources/: api.txt  api_summary.txt  index.txt  todo.txt
static/: searchtools.js
utils/: dot_parser.py  manifolds.dot  pydot_a.py  pydot_a.py.old  show_manifolds_relations.py
(+485 files in other folders)
