[project]
name = "PyGeometry-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]

[tool.poetry]
name = "PyGeometry-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "geometry"},
    {from = "src", include = "geometry/distances"},
    {from = "src", include = "geometry/manifolds"},
    {from = "src", include = "geometry/manifolds/todo"},
    {from = "src", include = "geometry/subspaces"},
    {from = "src", include = "geometry/utils"},
    ]

[tool.poetry.dependencies]
PyContracts3 = ">=7"
numpy = "*"
scipy = "*"
zuper-commons-z7 = "*"

[tool.poetry.group.test.dependencies]
nose = "*"

[build-system]
requires = [
    "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
